--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,32 @@
+/* variables */
+/* mixins - Google Fonts */
+.serif {
+  font-family: 'Sorts Mill Goudy', serif;
+}
+.sansSerif {
+  font-family: 'Cabin', sans-serif;
+}
+/* begin style */
 body {
   margin: 0;
   color: #686868;
   line-height: 1.5;
   font-size: 16px;
+  font-family: 'Cabin', sans-serif;
 }
 h1 {
   color: #d91f2b;
   font-size: 3em;
   margin: 0;
   text-align: center;
+  font-family: 'Sorts Mill Goudy', serif;
 }
 h2 {
   color: #686868;
   font-size: 1.5em;
   text-align: center;
   font-style: italic;
+  font-family: 'Sorts Mill Goudy', serif;
 }
 section#hero {
   background: url("https://placeholdit.imgix.net/~text?txtsize=225&txt=3000%C3%971000&w=3000&h=1000");
@@ -105,6 +117,7 @@ button.methodologyButton {
   color: #ffffff;
   margin: 1em;
   font-size: 0.75em;
+  font-family: 'Cabin', sans-serif;
 }
 button.reportButton:hover,
 button.reportButton:focus,
